--- a/smart-contract/package.json
+++ b/smart-contract/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.9.2",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "web3": "^4.0.1"
   }
 }
